# my_fist_rust_bot

./: .env.example  .gitignore  Cargo.toml  README.md  schema.sql
src/: db.rs  main.rs
